# git-pr

./: .gitignore  Cargo.toml  README.md  failing_git.sh  fake_git.sh
.github/workflows/: rust.yml
doc/: git-pr.1
src/: branch_name.rs  execute.rs  lib.rs  list_of.rs  local_branch.rs  output_list.rs
tests/: real_git.rs
