[package]
name = "git-pr"
version = "0.1.0"
authors = ["Robert D. French <robert@robertdfrench.me>", "J. Caleb Wherry <caleb@calebwherry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[dev-dependencies]
tempdir = "0.3.7"

[lib]
name = "libgitpr"
path = "src/lib.rs"
